[translations] nl update

--- a/po/nl.po
+++ b/po/nl.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-09-14 21:31+0100\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-09-14 22:07+0100\n"
+"Last-Translator: delagroov <degroov@hotmail.com>\n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
 "MIME-Version: 1.0\n"
@@ -5239,7 +5239,7 @@ msgstr "Opname"
 msgid "Recording in progress"
 msgstr "Opname is bezig"
 
-msgid "Recording settings"
+msgid "Recording Settings"
 msgstr "Opname instellingen"
 
 msgid "Recording type"
@@ -5965,7 +5965,7 @@ msgstr "Service referentie"
 msgid "Service scan"
 msgstr "Zenders zoeken"
 
-msgid "Service searching"
+msgid "Service Searching"
 msgstr "Kanalen zoeken"
 
 msgid ""
@@ -8111,7 +8111,7 @@ msgstr "Gebruikersnaam"
 msgid "User defined"
 msgstr "Door u ingesteld"
 
-msgid "User interface"
+msgid "User Interface"
 msgstr "Gebruikers interface"
 
 msgid "Username"
