[translations] DE updates thanks Ralf.

--- a/po/de.po
+++ b/po/de.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-14 17:59+0100\n"
-"PO-Revision-Date: 2012-09-14 19:14-0000\n"
+"POT-Creation-Date: 2012-09-19 15:32+0100\n"
+"PO-Revision-Date: 2012-09-20 12:57-0000\n"
 "Last-Translator: Andy Blackburn <andyblac@o2.co.uk>\n"
 "Language-Team: Deutsch <> j-ot&Trial\n"
 "Language: de\n"
@@ -348,7 +348,7 @@ msgid "3D Mode"
 msgstr "3D Modus"
 
 msgid "3D setup"
-msgstr ""
+msgstr "3D Einstellungen"
 
 msgid "3X"
 msgstr ""
@@ -426,7 +426,7 @@ msgid ""
 "A finished record timer wants to set your\n"
 "STB_BOX to standby. Do that now?"
 msgstr ""
-"Ein Aufnahmetimer will die STB_BOX in den Standby-Modus schalten.\n"
+"Ein Aufnahmetimer will die STB_BOX in Bereitschaft schalten.\n"
 "Jetzt ausführen?"
 
 msgid ""
@@ -495,7 +495,7 @@ msgid ""
 "STB_BOX to standby. Do that now?"
 msgstr ""
 "Ein Ausschalt-Timer möchte die STB_BOX\n"
-"in den Standby-Modus schalten. Dies jetzt tun?"
+"in Bereitschaft schalten. Dies jetzt tun?"
 
 msgid ""
 "A sleep timer wants to shut down\n"
@@ -530,7 +530,7 @@ msgid "AFP Setup"
 msgstr "AFP Einstellungen"
 
 msgid "AFP setup"
-msgstr ""
+msgstr "AFP Einstellungen"
 
 msgid "AIT data will be included in http streams"
 msgstr "AIT Daten werden in HTTP Streams eingefügt"
@@ -552,7 +552,7 @@ msgid "Accesspoint:"
 msgstr "Zugangspunkt:"
 
 msgid "Action"
-msgstr ""
+msgstr "Aktion"
 
 msgid "Action on long powerbutton press"
 msgstr "Aktion bei langem Tastendruck auf Ein/Aus"
@@ -882,7 +882,7 @@ msgid "Arts/Culture"
 msgstr "Kunst/Kultur"
 
 msgid "Ask before shutdown"
-msgstr ""
+msgstr "Vor Ausschalten fragen"
 
 msgid "Ask user"
 msgstr "Benutzer fragen"
@@ -952,7 +952,7 @@ msgid "Automatic save"
 msgstr "Automatisch speichern"
 
 msgid "Automatic scan"
-msgstr ""
+msgstr "Automatische Suche"
 
 msgid "Automatic setting backup"
 msgstr "Automatische Einstellungs-Sicherung"
@@ -1093,7 +1093,7 @@ msgid "Brightness (Normal)"
 msgstr "Helligkeit (Normal)"
 
 msgid "Brightness (Standby)"
-msgstr "Helligkeit (Standby)"
+msgstr "Helligkeit (Bereitschaft)"
 
 msgid "Buffers:"
 msgstr "Buffer:"
@@ -1294,10 +1294,10 @@ msgid "Channel Selection"
 msgstr "Senderliste"
 
 msgid "Channel Selection Configuration"
-msgstr ""
+msgstr "Senderliste Einstellungen"
 
 msgid "Channel list on mode change"
-msgstr ""
+msgstr "Senderliste bei Moduswechsel"
 
 msgid "Channel list preview"
 msgstr "Vorschau Senderliste"
@@ -1384,8 +1384,8 @@ msgid ""
 "Choose the location where the EPG data will be stored when the STB_BOX is "
 "shut down. The location must be available at boot time."
 msgstr ""
-"Wähle den Speicherort wo die EPG Daten gespeichert werden wenn die Vu+ "
-"Ultimo ausgeschaltet wird. Dieser Ort muss beim Booten verfügbar sein."
+"Wähle den Speicherort wo die EPG Daten gespeichert werden wenn die STB_BOX "
+"ausgeschaltet wird. Dieser Ort muss beim Booten verfügbar sein."
 
 msgid ""
 "Choose the name of the file that holds the EPG data when the STB_BOX is shut "
@@ -1753,7 +1753,7 @@ msgid "Create DVD-ISO"
 msgstr "DVD-ISO erstellen"
 
 msgid "Create Directory"
-msgstr ""
+msgstr "Verzeichnis anlegen"
 
 msgid "Create Filesystem"
 msgstr "Dateisystem erstellen"
@@ -1915,7 +1915,7 @@ msgid "Deep Standby"
 msgstr "Ausschalten"
 
 msgid "Deep standby"
-msgstr ""
+msgstr "Ausschalten"
 
 msgid "Default"
 msgstr "Standard"
@@ -2007,7 +2007,7 @@ msgid "Device Mounts"
 msgstr "Geräte-Mountpunkte"
 
 msgid "Device setup"
-msgstr ""
+msgstr "Geräte Einstellungen"
 
 msgid "Devicename:"
 msgstr "Gerätename:"
@@ -2513,7 +2513,7 @@ msgstr ""
 "vorhanden ist)."
 
 msgid "Enables channel numbers in the channel selection screen"
-msgstr ""
+msgstr "Zeigt Sendernummern in Senderliste an"
 
 msgid "Enables the trashcan feature"
 msgstr "Aktiviert den Mülleimer"
@@ -2715,7 +2715,7 @@ msgid "FTP Setup"
 msgstr "FTP Einstellungen"
 
 msgid "FTP setup"
-msgstr ""
+msgstr "FTP Einstellungen"
 
 msgid "Factory reset"
 msgstr "Werkseinstellungen"
@@ -2770,7 +2770,7 @@ msgid "Filesystem Check"
 msgstr "Dateisystemüberprüfung"
 
 msgid "Filesystem check"
-msgstr ""
+msgstr "Dateisystemprüfung"
 
 msgid "Finetune"
 msgstr "Feineinst."
@@ -3001,7 +3001,7 @@ msgid "HDMI CEC Setup"
 msgstr "HDMI CEC Einstellungen"
 
 msgid "Handle standby from TV"
-msgstr "Fernseher in den Standby versetzen"
+msgstr "Fernseher in Bereitschaft versetzen"
 
 msgid "Handle wakeup from TV"
 msgstr "Fernseher aufwachen"
@@ -3013,7 +3013,7 @@ msgid "Harddisk setup"
 msgstr "Festplatten Einstellungen"
 
 msgid "Harddisk standby after"
-msgstr "Festplatte Standby nach"
+msgstr "Festplatte Ruhezustand nach"
 
 msgid "Hardware:"
 msgstr ""
@@ -3287,7 +3287,7 @@ msgid "Inadyn Setup"
 msgstr "Inadyn Einstellungen"
 
 msgid "Inadyn setup"
-msgstr ""
+msgstr "Inadyn Einstellungen"
 
 msgid "Include AIT in http streams"
 msgstr "AIT in HTTP-Streams integrieren"
@@ -3347,7 +3347,7 @@ msgid "Initializing storage device..."
 msgstr "Initalisiere Laufwerk...."
 
 msgid "Inotify Monitoring"
-msgstr ""
+msgstr "Inotify Überwachung"
 
 msgid "Input"
 msgstr "Eingabe"
@@ -3461,6 +3461,8 @@ msgstr "Italienisch"
 msgid ""
 "Items in trashcan will be deleted if less then the set space is available."
 msgstr ""
+"Objekte im Mülleimer werden gelöscht wenn nicht mehr der eingestellte "
+"Speicher frei ist."
 
 msgid "Items per Page "
 msgstr "Objekte pro Seite"
@@ -3524,16 +3526,16 @@ msgid "LAN connection"
 msgstr "LAN Verbindung"
 
 msgid "LED Blinking"
-msgstr ""
+msgstr "LED blinkend"
 
 msgid "LED Deep Standby"
 msgstr "LED wenn Aus"
 
 msgid "LED Normal"
-msgstr ""
+msgstr "LED normal"
 
 msgid "LED Standby"
-msgstr ""
+msgstr "LED Bereitschaft"
 
 msgid "LED brightness during deep standby."
 msgstr "LED Helligkeit wenn ausgeschaltet."
@@ -3542,7 +3544,7 @@ msgid "LED brightness during normal operations."
 msgstr "LED Helligkeit im Betrieb."
 
 msgid "LED brightness during standby."
-msgstr "LED Helligkeit im Standby."
+msgstr "LED Helligkeit in Bereitschaft."
 
 msgid "LNB"
 msgstr "LNB"
@@ -3582,7 +3584,7 @@ msgstr "Letzte benutzte Freigabe:"
 
 msgctxt "third event: 'third' event label"
 msgid "Later"
-msgstr ""
+msgstr "Später"
 
 msgid "Latitude"
 msgstr "Breitengrad"
@@ -3648,7 +3650,7 @@ msgid "List available networks"
 msgstr "Zeige verfügbare Netzwerke"
 
 msgid "List mode"
-msgstr ""
+msgstr "Listenmodus"
 
 msgid "List of Storage Devices"
 msgstr "Speichergeräteliste"
@@ -3703,7 +3705,7 @@ msgid "Logs location"
 msgstr "Speicherort für Logs"
 
 msgid "Logs manager"
-msgstr ""
+msgstr "Logs Verwaltung"
 
 msgid "Logs older then the set no of days will be deleted."
 msgstr "Log Datei die älter sind als diese Anzahl von Tagen werden gelöscht."
@@ -3848,7 +3850,7 @@ msgid "MiniDLNA Setup"
 msgstr "MiniDLNA Einstellungen"
 
 msgid "MiniDLNA setup"
-msgstr ""
+msgstr "MiniDLNA Einstellungen"
 
 #, python-format
 msgid "Minimum age %d years"
@@ -3894,7 +3896,7 @@ msgid "Mounts Setup"
 msgstr "Mounts Einstellungen"
 
 msgid "Mounts setup"
-msgstr ""
+msgstr "Mounts Einstellungen"
 
 msgid "Move"
 msgstr "Verschieben"
@@ -3983,7 +3985,7 @@ msgid "NFS Setup"
 msgstr "NFS Einstellungen"
 
 msgid "NFS setup"
-msgstr ""
+msgstr "NFS Einstellungen"
 
 msgid "NIM"
 msgstr "NIM"
@@ -4425,6 +4427,7 @@ msgid ""
 "On reaching the end of a file during playback, you can choose the box's "
 "behavior."
 msgstr ""
+"Am Ende einer Filmwiedergabe kann das Verhalten der STB_BOX bestimmt werden"
 
 msgid ""
 "On reaching the end of a file during playback, you can choose the box's "
@@ -4467,7 +4470,7 @@ msgid "Only extensions."
 msgstr "Nur Erweiterungen."
 
 msgid "OpenVPN setup"
-msgstr ""
+msgstr "OpenVPN Einstellungen"
 
 msgid "OpenVpn Log"
 msgstr ""
@@ -4948,7 +4951,7 @@ msgid "Position of finished Timers in Timerlist"
 msgstr "Position beendeter Timer in der Timerliste"
 
 msgid "Position setup"
-msgstr ""
+msgstr "Position Einstellungen"
 
 msgid "Positioner"
 msgstr "Rotor"
@@ -5126,10 +5129,10 @@ msgid "Providers: "
 msgstr "Anbieter:"
 
 msgid "Put TV in standby"
-msgstr "Fernseher in den Standby versetzen"
+msgstr "Fernseher in den Bereitschaft versetzen"
 
 msgid "Put your STB_BOX in standby"
-msgstr "A/V-Receiver in den Standby versetzen"
+msgstr "A/V-Receiver in den Bereitschaft versetzen"
 
 msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python frontend für /tmp/mmi.socket"
@@ -5232,7 +5235,7 @@ msgid "Recording in progress"
 msgstr "Aktive Aufnahmen"
 
 msgid "Recording settings"
-msgstr ""
+msgstr "Aufnahme Einstellungen"
 
 msgid "Recording type"
 msgstr "Aufnahmetyp"
@@ -5268,7 +5271,7 @@ msgid "Refresh rate selection."
 msgstr "Auswahl der Bildwiederholungsrate."
 
 msgid "Regard deep standby as standby"
-msgstr "Deep-Standby wie Standby behandeln"
+msgstr "Ausschalten wie Bereitschaft behandeln"
 
 msgid "Release"
 msgstr "Release"
@@ -5509,7 +5512,7 @@ msgid "SABnzbd Setup"
 msgstr "SABnzbd Einstellungen"
 
 msgid "SABnzbd setup"
-msgstr ""
+msgstr "SABnzbd Einstellungen"
 
 msgid "SID"
 msgstr "SID"
@@ -5527,13 +5530,13 @@ msgid "SSID:"
 msgstr "SSID:"
 
 msgid "Samba Log"
-msgstr ""
+msgstr "Samba/CIFS Log"
 
 msgid "Samba Setup"
 msgstr "Samba Einstellungen"
 
 msgid "Samba setup"
-msgstr ""
+msgstr "Samba/CIFS Einstellungen"
 
 msgid "Sat"
 msgstr "Sa"
@@ -5605,7 +5608,7 @@ msgid "Scaling Mode"
 msgstr "Skalierungsmodus"
 
 msgid "Scan"
-msgstr ""
+msgstr "Suche"
 
 msgid "Scan "
 msgstr "Suche "
@@ -5956,7 +5959,7 @@ msgid "Service scan"
 msgstr "Sendersuche"
 
 msgid "Service searching"
-msgstr ""
+msgstr "Sendersuche"
 
 msgid ""
 "Service unavailable!\n"
@@ -6044,7 +6047,7 @@ msgid "Set the brightness level for normal operation."
 msgstr "Helligkeit für normalem Betrieb einstellen."
 
 msgid "Set the brightness level for standby."
-msgstr "Helligkeit für Standby einstellen."
+msgstr "Helligkeit für Bereitschaft einstellen."
 
 msgid "Set the colour of the Teletext subtitles."
 msgstr "Farbe von Videotext Untertitel einstellen."
@@ -6168,7 +6171,7 @@ msgid "Set the transparency of the DVB subtitles."
 msgstr "Transparenz von DVB Untertiteln."
 
 msgid "Set the type of the progress indication in the channel selection screen"
-msgstr ""
+msgstr "Typ der Fortschrittsanzeige in der Senderliste"
 
 msgid "Set the value for the initial fast-backward speed."
 msgstr ""
@@ -6318,7 +6321,7 @@ msgid "Show Log"
 msgstr "Zeige Log"
 
 msgid "Show Log Manager in extensions list ?"
-msgstr "Zeige Log Verwaltung ein Erweiterungen?"
+msgstr "Zeige Log Verwaltung in Erweiterungen?"
 
 msgid "Show Media playback Remaining/Elapsed as"
 msgstr "Zeige Zeit bei Wiedergabe als verbleibend/verstrichen"
@@ -6452,7 +6455,7 @@ msgstr "Zeige Informationen des aktuellen Programms."
 msgid ""
 "Show the length of a recording in the movielist (this might cause some "
 "additional loading time)"
-msgstr ""
+msgstr "Zeige Filmlänge in Filmliste (Start verzögert sich dadurch etwas)"
 
 msgid "Show the media player..."
 msgstr "Zeige den Medienplayer..."
@@ -6488,7 +6491,7 @@ msgid "Shutdown"
 msgstr "Ausschalten"
 
 msgid "Shutdown in (mins)"
-msgstr ""
+msgstr "Ausschalten in (Min)"
 
 msgid "Side by Side"
 msgstr "Side by Side"
@@ -6533,7 +6536,7 @@ msgid "Skin Setting"
 msgstr "Skinauswahl"
 
 msgid "Skin setup"
-msgstr ""
+msgstr "Skin Auswahl"
 
 msgid "Skins"
 msgstr "Skins"
@@ -6707,18 +6710,18 @@ msgid "Standard"
 msgstr ""
 
 msgid "Standby"
-msgstr "Standby"
+msgstr "Bereitschaft"
 
 msgid "Standby / Restart"
-msgstr "Standby / Neustart"
+msgstr "Bereitschaft / Neustart"
 
 #, python-format
 msgid "Standby Fan %d PWM"
-msgstr "Standby Lüfter %d PWM"
+msgstr "Bereitschaft Lüfter %d PWM"
 
 #, python-format
 msgid "Standby Fan %d Voltage"
-msgstr "Standby Lüfter %d Spannung"
+msgstr "Bereitschaft Lüfter %d Spannung"
 
 msgid "Start"
 msgstr ""
@@ -6932,7 +6935,7 @@ msgid "Telnet Setup"
 msgstr "Telnet Einstellungen"
 
 msgid "Telnet setup"
-msgstr ""
+msgstr "Telnet Einstellungen"
 
 msgid "Temperature and Fan control"
 msgstr "Temperatur- und Lüfter-Regelung"
@@ -7378,6 +7381,9 @@ msgid ""
 "is random aliasing as a result of strong compression). Obviously this goes "
 "at the cost of picture details."
 msgstr ""
+"Diese Option bestimmt die Stufe der Unterdrückung von Mosquito Rauschen. "
+"Mosquito Rauschen ist eine zufällige Abtaststörung durch zu hohe "
+"Kompression. Es geht auf Kosten von Bildeinzelheiten."
 
 msgid "This option sets  the picture contrast."
 msgstr "Diese Option bestimmt den Bildkontrast."
@@ -7398,6 +7404,8 @@ msgid ""
 "This option sets the scaler sharpness, used when stretching picture from 4:3 "
 "to 16:9."
 msgstr ""
+"Diese Option bestimmt die Skalierschärfe die benutzt wird wenn von 4:3 auf "
+"16:9 skaliert wird."
 
 msgid ""
 "This option sets the surpression of false digital contours, that are the "
@@ -7444,8 +7452,8 @@ msgid ""
 "If you already have a prepared bootable USB stick, please insert it now. "
 "Otherwise plug in a USB stick with a minimum size of 64 MB!"
 msgstr ""
-"Dieses Plugin erzeugt einen USB-Stick, mit dessen Hilfe die Firmware der Vu+ "
-"Ultimo aktualisiert werden kann, ohne dass dafür eine Netzwerk- oder WLAN-"
+"Dieses Plugin erzeugt einen USB-Stick, mit dessen Hilfe die Firmware der "
+"STB_BOX aktualisiert werden kann, ohne dass dafür eine Netzwerk- oder WLAN-"
 "Verbindung notwendig ist. Zuerst muss ein USB-Stick vorbereitet und "
 "bootfähig gemacht werden. Im nächsten Schritt kann eine NFI-Imagedatei vom "
 "Update-Server heruntergeladen und auf diesem Stick gespeichert werden.Wenn "
@@ -7510,6 +7518,14 @@ msgid ""
 "If you get an \"enabled\" message:\n"
 "-verify that you have a configured and working DHCP Server in your network."
 msgstr ""
+"Dieser Test prüft ob der Netzwerkadapter seine IP-Adresse automatisch per "
+"DHCP bekommt.\n"
+"Wenn hier \"disabled\" steht:\n"
+"- dann hat der Netzwerkadapter eine feste IP-Adresse\n"
+"- überprüfe ob die Einstellungen bezüglich der IP-Adresse stimmen.\n"
+"Wenn hier \"ensabled\" steht:\n"
+"Überprüfe ob sich im Netzwerk ein DHCP-Server befindet und dieser auch "
+"aktiviert ist."
 
 msgid "This test detects your configured LAN-Adapter."
 msgstr "Dieser Test stellt Ihren konfigurierten Netzwerkadapter fest."
@@ -7621,6 +7637,8 @@ msgid ""
 "Timeshift will only start when the start delay time has passed. This "
 "prevents numurous very short files when zapping."
 msgstr ""
+"TimeShift startet nur wenn die eingestellte Verzögerung vergangen ist. "
+"Dieses verhindert viele kleine Dateien beim Zappen."
 
 msgid "Timeshift-Save Action on zap"
 msgstr "Timeshift Speicheraktion beim Zappen"
@@ -7961,9 +7979,11 @@ msgid "Use power measurement"
 msgstr "Stromaufnahme messen"
 
 msgid ""
-"Use power measurement to detect when the rotor stops turning (if your Vu+ "
-"Duo supports that)"
+"Use power measurement to detect when the rotor stops turning (if your "
+"STB_BOX supports that)"
 msgstr ""
+"Benutze Strommessung um zu erkennen ob der Rotor gestoppt hat (Wenn es deine "
+"STB_BOX unterstützt)"
 
 msgid "Use slim screen"
 msgstr "Benutze minimale Darstellung"
@@ -8069,7 +8089,7 @@ msgid "User defined"
 msgstr "Benutzerdefiniert"
 
 msgid "User interface"
-msgstr ""
+msgstr "Benutzeroberfläche"
 
 msgid "Username"
 msgstr "Benutzername"
@@ -8318,13 +8338,13 @@ msgid "Wakeup"
 msgstr "Einschalten"
 
 msgid "Wakeup TV from standby"
-msgstr "Fernseher aus Standby einschalten"
+msgstr "Fernseher aus Bereitschaft einschalten"
 
 msgid "Wakeup signal from TV"
 msgstr "Einschaltsignal vom Fernseher"
 
 msgid "Wakeup your STB_BOX from standby"
-msgstr "A/V-Receiver aus Standby einschalten"
+msgstr "A/V-Receiver aus Bereitschaft einschalten"
 
 msgid "Warn if free space drops below (kB):"
 msgstr "Warnen wenn der freie interne Speicher unter (kB) fällt:"
@@ -8404,6 +8424,11 @@ msgid ""
 "This start wizard will guide you through the basic setup of your STB_BOX.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
+"Willkommen.\n"
+"\n"
+"Dieser Startassistent wird dich durch die grundlegenden Einstellungen deiner "
+"STB_BOX führen.\n"
+"Drücke OK auf der Fernbedienung um zum nächsten Schritt zu gelangen."
 
 msgid "Welcome..."
 msgstr "Willkommen..."
@@ -9481,10 +9506,10 @@ msgid "get the cards' server"
 msgstr ""
 
 msgid "go to deep standby"
-msgstr "in Deep Standby gehen"
+msgstr "Ausschalten"
 
 msgid "go to standby"
-msgstr "in Standby gehen"
+msgstr "in Bereitschaft gehen"
 
 msgid "grab this frame as bitmap"
 msgstr "Diesen Frame als Bitmap speichern"
@@ -9713,7 +9738,7 @@ msgid "no or unknown card inserted"
 msgstr "Keine oder unbekannte Karte"
 
 msgid "no standby"
-msgstr "Kein Standby"
+msgstr "Keine Bereitschaft"
 
 msgid "no storage devices found"
 msgstr "Kein Laufwerk gefunden"
@@ -10245,7 +10270,7 @@ msgid "uShare Setup"
 msgstr "uShare Einstellungen"
 
 msgid "uShare setup"
-msgstr ""
+msgstr "uShare Einstellungen"
 
 msgid "unconfirmed"
 msgstr "Nicht bestätigt"
@@ -10260,7 +10285,7 @@ msgid "unpublished"
 msgstr "unveröffentlicht"
 
 msgid "until standby/restart"
-msgstr "bis zum Standby/Neustart"
+msgstr "bis zu Bereitschaft/Neustart"
 
 msgid "updates available."
 msgstr "Updates verfügbar."
