nl.po: cosmetics

--- a/po/nl.po
+++ b/po/nl.po
@@ -4941,11 +4941,11 @@ msgid ""
 msgstr "De WiFi plugin is niet geïnstalleerd. Deze plugin eerst installeren aub."
 
 msgid "The wizard can backup your current settings. Do you want to do a backup now?"
-msgstr "De wizard kan uw huidige settings opslaan. Wilt u nu een backup maken?"
+msgstr "De wizard kan uw huidige instellingen opslaan. Wilt u nu een backup maken?"
 
 #, python-format
 msgid "The wizard found a configuration backup. Do you want to restore your old settings from %s?"
-msgstr "De wizard heeft een backup configuratie gevonden. Wilt u uw instellingen herstellen van %s?"
+msgstr "De wizard heeft een configuratie backup gevonden. Wilt u uw instellingen van %s herstellen?"
 
 msgid "The wizard is finished now."
 msgstr "De wizard is nu gereed."
@@ -5719,7 +5719,7 @@ msgstr ""
 "Welkom.\n"
 "\n"
 "Deze opstarthulp voert u langs de basis instellingen van uw ontvanger.\n"
-"Druk de OK toets op uw afstandsbediening om naar de volgende stap verder te gaan van de setup."
+"Druk de OK toets op uw afstandsbediening om naar de volgende stap te gaan."
 
 msgid "Welcome..."
 msgstr "Welkom..."
@@ -5734,7 +5734,7 @@ msgid "What do you want to scan?"
 msgstr "Wat wilt u zoeken?"
 
 msgid "What to do with submitted crashlogs?"
-msgstr "Wat moet er gebeuren met het ingediende crashlogs?"
+msgstr "Wat moet er gebeuren met ingediende crashlogs?"
 
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
@@ -5751,7 +5751,7 @@ msgstr ""
 "Werkelijk uitvoeren?"
 
 msgid "Where do you want to backup your settings?"
-msgstr "Waar wilt u de instellingen opslaan?"
+msgstr "Waar wilt u de backup van uw instellingen opslaan?"
 
 msgid "Where to save temporary timeshift recordings?"
 msgstr "Waar wilt u de tijdelijke timeshift opnames opslaan?"
@@ -5799,13 +5799,13 @@ msgid "Yes, always"
 msgstr "Ja, altijd"
 
 msgid "Yes, and delete this movie"
-msgstr "Ja en verwijder dit bestand"
+msgstr "Ja, en verwijder dit bestand"
 
 msgid "Yes, and don't ask again"
-msgstr "Ja en niet meer vragen"
+msgstr "Ja, en niet meer vragen"
 
 msgid "Yes, backup my settings!"
-msgstr "Ja, mijn instellingen opslaan!"
+msgstr "Ja, ik wil een backup maken van mijn instellingen!"
 
 msgid "Yes, do a manual scan now"
 msgstr "Ja, voer nu de handmatige zoekfunctie uit"
